infrastructure/kind/testcurl.dev.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testcurl
spec:
  containers:
  - name: curl
    image: curlimages/curl:7.79.1
    command: [ "sleep", "600" ]
    resources:
      requests:
        cpu: "10m"
        memory: "10Mi"
      limits:
        cpu: "30m"
        memory: "30Mi"
