infrastructure/kind/simple-nginx.dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name simple-nginx
spec:
  selector:
    app: *name
  ports:
    - protocol: TCP
      # svc:port(expose) -> pod:targetPort
      port: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: &name simple-nginx
  labels:
    app: *name
spec:
  containers:
    - name: *name
      # image: nginx:1.21.4-alpine
      image: nginx:1.21.4
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
  volumes:
    - name: html
      hostPath:
        type: Directory
        # directory location on host
        path: /root/kimidori/infrastructure/kind/html
