infrastructure/kind/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kimidori-local
spec:
  ingressClassName: nginx
  rules:
  # - host: kimidori.localdev.me
  #   http:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: simple-nginx
            port:
              number: 80
